[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repr"
version = "0.1.0"
description = "Generic Repr class for a cutomizable default __repr__ method"
readme = "README.rst"
authors = [
  {name = "Bob de Boisvilliers", email = "Bo_wood@outlook.fr"}
]
maintainers = [
  {name = "Bob de Boisvilliers", email = "Bo_wood@outlook.fr"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/lakazatong/repr/issues"
changelog = "https://github.com/lakazatong/repr/blob/master/changelog.md"
homepage = "https://github.com/lakazatong/repr"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

